Fixed button link

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <a href="/"><div class="backBtn sitLeft dark"></div></a>
+    <a href="/#projects"><div class="backBtn sitLeft dark"></div></a>
     <div ng-view></div>
 
     <!-- build:js(src) scripts/vendor.js -->
