--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <a href="/#projects"><div class="backBtn sitLeft dark"></div></a>
+    <a href="https://github.com/PortableStick/wikipediaViewer" class="githubIcon dark sitRight" target="_blank"></a>
     <div ng-view></div>
 
     <!-- build:js(src) scripts/vendor.js -->
